--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -1,17 +1,15 @@
 
 .head-professor{
     display: flex;
-    //border: 1px solid silver;
     border-radius: 10px;
+    margin-top: 2rem;
     overflow: hidden;
     width: 100%;
 }
 .head-professor > h{
     display: block;
 }
-.head-professor > p{
-    font-size: 15px;
-}
+
 .professor-left{
     padding-right: 1.5rem;
 }
@@ -22,13 +20,18 @@
 }
 .professor-left > div{
     display: block;
-    align-items: center;
     padding: 1rem;
     height: 8rem;
+}
+.professor-left > div > span{
+    display: block;
+    text-align: center;
+    font-size: 10px;
 }
 .professor-right{
     padding-left: 1rem;
     border-left: 1px solid silver;
+    overflow: auto;
 }
 #professor-name{
     display: block;
@@ -43,4 +46,26 @@
 }
 .career{
     font-size: 10px;
+}
+.division-line{
+    display: flex;
+    margin-top: 2rem;
+    padding: 0, 1rem;
+    flex-basis: width;
+    font-size: 2rem;
+    color: rgba(0,0,0,0.50);
+}
+.division-line::before{
+    content: "";
+    margin-top: 1.5rem;
+    flex-grow: 1;
+    height: 1px;
+    background: rgba(0,0,0,0.35);
+}
+.division-line::after{
+    content: "";
+    margin-top: 1.5rem;
+    flex-grow: 1;
+    height: 1px;
+    background: rgba(0,0,0,0.35);;
 }
