--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -81,8 +81,27 @@
 .student{
     display:inline;
     text-align: center;
+    margin-bottom: 1rem;
 }
-.student-field, .student-email{
-    font-size: 0.8rem;
+.student-top{
+    margin-bottom: 0.5rem;
+}
+.student-field{
+    font-size: 0.5rem;
+    margin-top: 0;
+    margin-bottom: 0.8rem;
+}
+.student-email{
+    font-size: 0.5rem;
     margin: 0.5rem 0;
+}
+.student-link{
+    text-align: center;
+}
+.student-division{
+    border: 0;
+    height: 1px;
+    margin: 0 1rem;
+    background-color: #fff;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
