--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -110,3 +110,9 @@
     background-color: #fff;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
+.student-photo{
+    width:250px;
+    height:250px;
+    background-size:cover;
+}
