--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -33,13 +33,12 @@
     overflow: auto;
     font-size: 12px;
 }
-#professor-name{
+.professor-name{
     display: block;
     text-align: center;
 }
 #professor-link{
     padding: 1rem;
-    font-size: 10px;
 }
 .professor-link{
     display: inline-block;
