--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ "/publications" | relative_url }}">Publications</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ "/seminar" | relative_url }}">Seminar</a>
+        </li>
       </ul>
     </div>
   </div>
