--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -35,12 +35,16 @@
 }
 .professor-name{
     font-weight:bold;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+}
+.professor-field{
+    font-size: 1.05rem;
 }
 #professor-link{
     padding: 1rem;
 }
 .professor-link{
+    font-size: 1.1rem;
     display: inline-block;
 }
 
@@ -78,18 +82,18 @@
     //background: rgba(0,0,0,0.35);;
 }
 .students{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 200px);
+    justify-content: space-between;
 }
 .student{
-    display:inline;
+    display: inline;
     text-align: center;
     margin-bottom: 1rem;
-    width:250px;
+    width: 200px;
 }
 .student-name{
-    font-size:1.3rem;
+    font-size: 1.25rem;
 }
 .student-top{
     margin-bottom: 0.5rem;
@@ -99,16 +103,13 @@
     height: 12rem;
     object-fit: cover;
 }
-.student-name{
-    font-size: 1.4rem;
-}
 .student-field{
+    font-size: 1rem;
     margin-top: 0;
     margin-bottom: 0.8rem;
 }
 .student-email{
-    font-size: 0.8rem;
-    font-size: 1rem;
+    font-size: 0.85rem;
     margin: 0.5rem 0;
 }
 .student-link{
@@ -121,9 +122,42 @@
     background-color: #fff;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
-
 .student-photo{
-    width:250px;
-    height:250px;
-    background-size:cover;
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+}
+
+
+.alumnis{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 130px);
+    justify-content: space-between;
+}
+.alumni{
+    display: inline;
+    text-align: center;
+    margin-bottom: 1rem;
+    width: 130px;
+}
+.alumni-name{
+    font-size: 0.95rem;
+}
+.alumni-top{
+    margin-bottom: 0.5rem;
+}
+.alumni-top > img{
+    width: 12rem;
+    height: 12rem;
+    object-fit: cover;
+}
+.alumni-field{
+    font-size: 0.7rem;
+    margin-top: 0;
+    margin-bottom: 0.8rem;
+}
+.alumni-photo{
+    width: 130px;
+    height: 130px;
+    background-size: cover;
 }
