--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,6 +14,7 @@ layout: default
       <div class="col-lg-12 col-md-12 mx-auto">
         <div class="page-heading">
           <h1>{{ page.title }}</h1>
+          <h2>{{ page.subtitle }}</h2>
           {% if page.description %}
           <span class="subheading">{{ page.description }}</span>
           {% endif %}
