회원 정보 수정: YoonJun Kim 이름을 YunJun Kim으로 변경 및 출판물에 수상 정보 추가 스타일 수정: 수상 정보를 표시하기 위한 CSS 클래스 추가 아이콘 파일 업데이트 및 불필요한 파일 삭제

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -36,4 +36,11 @@
 .pub_button.pub_button-patent{
   background-color:$yellow;
 }
+.pub_award{
+  font-size:1.1rem;
+  line-height:1rem;
+  color:$yellow;
+  font-weight:600;
+  margin-left:0.5rem;
+}
 /* end custom scss snippet */
