Sass 코드에서 math 모듈을 사용하여 계산식 개선 및 주석 처리된 페이지네이션 설정 제거

--- a/_sass/common/classes/_grid.scss
+++ b/_sass/common/classes/_grid.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 $grid-columns: 12;
 
 .grid-container {
@@ -18,7 +20,7 @@ $grid-columns: 12;
     @include flex(1);
   } @else {
     @include flex(none);
-    width: percentage($columns / $grid-columns);
+    width: percentage(math.div($columns, $grid-columns));
   }
 }
 
