이미지 포맷 및 경로 수정: unknown.jpg를 unknown.gif로 변경하고, responsive_image_block을 간소화하여 이미지 로딩 방식을 개선함

--- a/_includes/srcset-resized-fallback.html
+++ b/_includes/srcset-resized-fallback.html
@@ -15,4 +15,8 @@ Usage:
 {% endfor %}
 {% endcapture %}
 
-<img src="/{{ largest.path }}" alt="{{ alt }}" srcset="{{ srcset | strip_newlines }} /{{ path }} {{ original.width }}w">
+{% if largest != nil %}
+<img src="/{{ largest.path }}" alt="{{ alt }}" srcset="{{ srcset | strip_newlines }}">
+{% else %}
+<img src="/{{ path }}" alt="{{ alt }}">
+{% endif %}
