연구 페이지에 이미지 추가 및 스타일 수정: responsive_image를 사용하여 이미지 중앙 정렬 및 크기 조정

--- a/_includes/srcset-resized-fallback.html
+++ b/_includes/srcset-resized-fallback.html
@@ -16,7 +16,7 @@ Usage:
 {% endcapture %}
 
 {% if largest != nil %}
-<img src="/{{ largest.path }}" alt="{{ alt }}" srcset="{{ srcset | strip_newlines }}">
+<img src="/{{ largest.path }}" alt="{{ alt }}" srcset="{{ srcset | strip_newlines }}" class="{{ class }}">
 {% else %}
-<img src="/{{ path }}" alt="{{ alt }}">
+<img src="/{{ path }}" alt="{{ alt }}" class="{{ class }}">
 {% endif %}
